# assignment_backend_arjavJain

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 20260402_000001_initial_finance_schema.py
app/: __init__.py  database.py  main.py  seed.py
app/core/: config.py  security.py
app/dependencies/: rbac.py
app/models/: __init__.py  record.py  user.py
app/routers/: auth.py  dashboard.py  records.py  users.py
app/schemas/: record.py  user.py
app/services/: analytics_service.py  record_service.py  user_service.py
